10.api/k8/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      labels:
        name: api
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nfs-pvc
        - name: ca-client-config
          configMap:
            name: ca-client-config
            items:
              - key: config.json
                path: config.json
                mode: 0544
      containers:
        - name: api
          stdin: true
          tty: true
          resources:
            limits:
              memory: "450Mi"
              cpu: "400m"
            requests:
              memory: "400Mi"
              cpu: "300m"
          image: adityajoshi12/api:1.0
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /usr/src/app/connection-profile
              subPath: connection-profile
            - name: data
              mountPath: /organizations
              subPath: organizations
            - name: data
              mountPath: /usr/src/app/wallet
              subPath: wallet
            - mountPath: /usr/src/app/config.json
              name: ca-client-config
              subPath: config.json  


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  type: ClusterIP
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    name: api
